[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/core/Audio.gd" type="Script" id=1]

[node name="AudioController" type="Node2D"]
script = ExtResource( 1 )
mute = true
vol_bgm = -20.0

[node name="bgm" type="AudioStreamPlayer" parent="."]

[node name="sfx1" type="AudioStreamPlayer" parent="."]

[node name="sfx2" type="AudioStreamPlayer" parent="."]

[node name="sfx3" type="AudioStreamPlayer" parent="."]

[node name="sfx4" type="AudioStreamPlayer" parent="."]

[node name="sfx5" type="AudioStreamPlayer" parent="."]
